# MenuServers

./: .gitignore  MonkongsLoader.py  MonksMenu.js  MonksMenu.ts  MonksMenuLauncher.py  StartBoot.bat  discordrpc.js  discordrpc.ts  eac.js  eac.ts  frida-il2cpp-bridge.js  inject.py  m4quest.js  m4quest.ts  pcmode.js  pcmode.ts  scripts.json  symbols.js  symbols.ts
Bypassed/: eac.js  eac.ts  stuff.js
imgui_overlay/: CMakeLists.txt  build.bat  resources.rc  setup.bat
imgui_overlay/dumper/: CMakeLists.txt  dump.json  dumper.cpp  dumper.py
imgui_overlay/include/: antitamper.h  game.h  memory.h  modstate.h  offsets.h  offsets_generated.h  pipe.h  resource.h
imgui_overlay/runtime/: ac_bridge.js  backend.js
imgui_overlay/src/: main.cpp
